--- a/howmuch-egpay-bridge/build.gradle
+++ b/howmuch-egpay-bridge/build.gradle
@@ -8,11 +8,10 @@ afterEvaluate {
     publishing {
         publications {
             release(MavenPublication) {
-                from components.release
-
                 groupId = 'com.howmuch_egpay_bridge'
                 artifactId = 'howmuch-egpay-bridge'
                 version = '1.0.1'
+//                from components.release
             }
         }
     }
